Added bootstrap (doesn't connect though)

--- a/FrontEnd/angular101lab/src/app/app.component.html
+++ b/FrontEnd/angular101lab/src/app/app.component.html
@@ -1,1 +1,8 @@
 <h1>Hello world</h1>
+<div class="jumbotron jumbotron-detail-back container-fluid">
+  <div class=" my-5" style="height:20%"></div>
+  <div class="container text-center mt-4 transparent">
+      <h1 class="text-white">Welcome to Student Enrolment! </h1>
+  </div>
+</div>
+<router-outlet></router-outlet>
