--- a/FrontEnd/angular101lab/src/app/app.component.html
+++ b/FrontEnd/angular101lab/src/app/app.component.html
@@ -1,8 +1,25 @@
-<h1>Hello world</h1>
-<div class="jumbotron jumbotron-detail-back container-fluid">
-  <div class=" my-5" style="height:20%"></div>
-  <div class="container text-center mt-4 transparent">
-      <h1 class="text-white">Welcome to Student Enrolment! </h1>
-  </div>
-</div>
+
+
+
+  <nav class="navbar navbar-expand-sm navbar-dark fixed-top bg-dark">
+    <a class="navbar-brand" href="#">
+        <img src="images/EatingDoubts.png"  class="d-inline-block align-top" alt="">
+    </a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="NavbarCollapse" aria-expanded="true" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+    </button><!-- This button only appears in the mobile view-->
+    <div class="container">
+        <div class="collapse navbar-collapse" id="navbarCollapse">
+            <ul class="nav navbar-nav mr-auto">
+
+                <li class="nav-item active">
+                    <a class="nav-link" routerLink="students" Button><i class="fa fa-home"></i> Home</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="MyRecipes.html"><i class="fa fa-star"></i> Saved</a>
+                </li>
+            </ul>
+        </div>
+    </div>
+</nav>
 <router-outlet></router-outlet>
