Connected display students with API (works)

--- a/FrontEnd/angular101lab/src/app/course/display-cou/display-cou.component.html
+++ b/FrontEnd/angular101lab/src/app/course/display-cou/display-cou.component.html
@@ -1,1 +1,19 @@
-<p>display-cou works!</p>
+<div class="container">
+    <table class="table">
+        <thead>
+          <tr>
+            <th scope="col">Course Id</th>
+            <th scope="col">Course name</th>
+            <th scope="col">Course description</th>
+          </tr>
+        </thead>
+        <tbody>
+            <tr *ngFor="let dataItem of courseList">
+                <td>{{dataItem.courseId}}</td>
+                <td>{{dataItem.courseName}}</td>
+                <td>{{dataItem.courseDescription}}</td>
+            </tr>
+        </tbody>
+      </table>
+</div>
+
