--- a/FrontEnd/angular101lab/src/app/course/course.component.html
+++ b/FrontEnd/angular101lab/src/app/course/course.component.html
@@ -1,29 +1,1 @@
-<div class="container">
-    <table class="table">
-        <thead>
-          <tr>
-            <th scope="col">Course Id</th>
-            <th scope="col">Course name</th>
-            <th scope="col">Course description</th>
-            <!-- <th scope="col">Courses?</th> -->
-          </tr>
-        </thead>
-        <tbody>
-          <tr>
-            <th scope="row">1</th>
-            <td>Mark</td>
-            <td>Otto</td>
-          </tr>
-          <tr>
-            <th scope="row">2</th>
-            <td>Jacob</td>
-            <td>Thornton</td>
-          </tr>
-          <tr>
-            <th scope="row">3</th>
-            <td>Larry</td>
-            <td>the Bird</td>
-          </tr>
-        </tbody>
-      </table>
-</div>
+<app-display-cou></app-display-cou>
