--- a/FrontEnd/angular101lab/src/app/subject/display-sub/display-sub.component.html
+++ b/FrontEnd/angular101lab/src/app/subject/display-sub/display-sub.component.html
@@ -1,3 +1,25 @@
+<!-- Button trigger modal -->
+
+
+<!-- Modal -->
+<div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog modal-dialog-centered modal-xl " role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLabel">{{ModalTitle}}</h5>
+        <button type="button" class="close" 
+        data-dismiss="modal" aria-label="Close"
+        (click)="closeClick()">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        <app-add-sub  [sub]="sub" *ngIf="ActivateAddEditSubComp"></app-add-sub>
+      </div>
+    </div>
+  </div>
+</div>
+
 <div class="container">
     <table class="table">
         <thead>
@@ -5,6 +27,12 @@
             <th scope="col">Subject Id</th>
             <th scope="col">Subject name</th>
             <th scope="col">Subject description</th>
+            <th scope="col">  <button type="button" class="btn btn-primary float-right m-2" 
+              data-toggle="modal" data-target="#exampleModal"
+              (click)="addClick()"
+              data-backdrop="static" data-keyboard="false">
+                Add Subject
+              </button></th>
           </tr>
         </thead>
         <tbody>
@@ -12,6 +40,11 @@
                 <td>{{dataItem.subjectId}}</td>
                 <td>{{dataItem.subjectName}}</td>
                 <td>{{dataItem.subjectDescription}}</td>
+                <td>
+                  <button type="button" class="btn btn-danger mr-1">
+                    <i class="fa fa-trash" aria-hidden="true"></i>
+                  </button>
+                </td>
             </tr>
         </tbody>
       </table>
