--- a/FrontEnd/angular101lab/src/app/student/display-stu/display-stu.component.html
+++ b/FrontEnd/angular101lab/src/app/student/display-stu/display-stu.component.html
@@ -1,3 +1,21 @@
+<div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog modal-dialog-centered modal-xl " role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLabel">{{ModalTitle}}</h5>
+        <button type="button" class="close" 
+        data-dismiss="modal" aria-label="Close"
+        (click)="closeClick()">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        <app-add-stu [stu]=stu *ngIf="ActivateAddEditStuComp"></app-add-stu>
+      </div>
+    </div>
+  </div>
+</div>
+
 <div class="container">
     <table class="table">
         <thead>
@@ -5,6 +23,12 @@
             <th scope="col">Student Id</th>
             <th scope="col">First name</th>
             <th scope="col">Last name</th>
+            <th scope="col">  <button type="button" class="btn btn-primary float-right m-2" 
+              data-toggle="modal" data-target="#exampleModal"
+              (click)="addClick()"
+              data-backdrop="static" data-keyboard="false">
+                Add Student
+              </button></th>
           </tr>
         </thead>
         <tbody>
