--- a/FrontEnd/angular101lab/src/app/course/add-cou/add-cou.component.html
+++ b/FrontEnd/angular101lab/src/app/course/add-cou/add-cou.component.html
@@ -1,1 +1,13 @@
-<p>add-cou works!</p>
+<div class="form-froup row">
+    <label class="col-sm-2 col-form-label"></label>
+    <div class="col-sm-10">
+        <input type="text" class="form-control" [(ngModel)]="courseName"
+        placeholder="Enter course name">
+        <input type="text" class="form-control" [(ngModel)]="courseDescription"
+        placeholder="Enter course description">
+    </div>
+</div>
+
+<button (click)="addCourse()" *ngIf="cou.courseId==0" class="btn btn-primary">
+    Add
+</button>
