implemented add subject, uses default courseid

--- a/FrontEnd/angular101lab/src/app/subject/display-sub/display-sub.component.html
+++ b/FrontEnd/angular101lab/src/app/subject/display-sub/display-sub.component.html
@@ -41,7 +41,7 @@
                 <td>{{dataItem.subjectName}}</td>
                 <td>{{dataItem.subjectDescription}}</td>
                 <td>
-                  <button type="button" class="btn btn-danger mr-1">
+                  <button type="button" class="btn btn-danger mr-1" (click)="deleteClick(dataItem)">
                     <i class="fa fa-trash" aria-hidden="true"></i>
                   </button>
                 </td>
