Fixed bugs for app and all entitiees work now

--- a/FrontEnd/angular101lab/src/app/app.component.html
+++ b/FrontEnd/angular101lab/src/app/app.component.html
@@ -1,32 +1,29 @@
-
-  <div class="container">
-    <nav class="navbar navbar-expand-sm navbar-dark fixed-top bg-dark">
-      <a class="navbar-brand" href="#">
-          StudentEnrolment
-      </a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="NavbarCollapse" aria-expanded="true" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-      </button><!-- This button only appears in the mobile view-->
-      <div class="container">
-          <div class="collapse navbar-collapse" id="navbarCollapse">
-              <ul class="nav navbar-nav mr-auto">
-  
-                  <li class="nav-item active">
-                      <a class="nav-link" href="../index.html"><i class="fa fa-home"></i> Home</a>
-                  </li>
-                  <li class="nav-item">
-                      <a class="nav-link" routerLink="students" Button><i class="fa fa-user"></i> Students</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" routerLink="courses" Button><i class="fa fa-book"></i> Courses</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" routerLink="subjects" Button><i class="fa fa-bookmark"></i> Subjects</a>
-                </li>
-              </ul>
-          </div>
+<div class="container">
+  <nav class="navbar navbar-expand-sm navbar-dark fixed-top bg-dark">
+    <a class="navbar-brand" href="#">
+      EnrollPro
+    </a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="NavbarCollapse" aria-expanded="true" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="container">
+      <div class="collapse navbar-collapse" id="navbarCollapse">
+        <ul class="nav navbar-nav mr-auto">
+          <li class="nav-item" [class.active]="isActive('/')">
+            <a class="nav-link" href="../index.html"><i class="fa fa-home"></i> Home</a>
+          </li>
+          <li class="nav-item" [class.active]="isActive('students')">
+            <a class="nav-link" routerLink="students"><i class="fa fa-user"></i> Students</a>
+          </li>
+          <li class="nav-item" [class.active]="isActive('courses')">
+            <a class="nav-link" routerLink="courses"><i class="fa fa-book"></i> Courses</a>
+          </li>
+          <li class="nav-item" [class.active]="isActive('subjects')">
+            <a class="nav-link" routerLink="subjects"><i class="fa fa-bookmark"></i> Subjects</a>
+          </li>
+        </ul>
       </div>
+    </div>
   </nav>
   <router-outlet></router-outlet>
 </div>
-
