--- a/FrontEnd/angular101lab/src/app/course/add-cou/add-cou.component.html
+++ b/FrontEnd/angular101lab/src/app/course/add-cou/add-cou.component.html
@@ -8,6 +8,6 @@
     </div>
 </div>
 
-<button (click)="addCourse()" *ngIf="cou.courseId==0" class="btn btn-primary">
+<button (click)="addCourse()" *ngIf="cou.courseId==0" class="btn btn-primary" data-dismiss="modal">
     Add
 </button>
