--- a/FrontEnd/angular101lab/src/app/subject/add-sub/add-sub.component.html
+++ b/FrontEnd/angular101lab/src/app/subject/add-sub/add-sub.component.html
@@ -8,6 +8,6 @@
     </div>
 </div>
 
-<button (click)="addSubject()" *ngIf="sub.subjectId==0" class="btn btn-primary">
+<button (click)="addSubject()" *ngIf="sub.subjectId==0" class="btn btn-primary" data-dismiss="modal">
     Add
 </button>
