--- a/FrontEnd/angular101lab/src/app/subject/display-sub/display-sub.component.html
+++ b/FrontEnd/angular101lab/src/app/subject/display-sub/display-sub.component.html
@@ -14,7 +14,7 @@
         </button>
       </div>
       <div class="modal-body">
-        <app-add-sub  [sub]="sub" *ngIf="ActivateAddEditSubComp"></app-add-sub>
+        <app-add-sub  [sub]="sub" (subjectAdded)="closeClick()" *ngIf="ActivateAddEditSubComp"></app-add-sub>
       </div>
     </div>
   </div>
