--- a/FrontEnd/angular101lab/src/app/course/display-cou/display-cou.component.html
+++ b/FrontEnd/angular101lab/src/app/course/display-cou/display-cou.component.html
@@ -17,7 +17,7 @@
 </div>
 
 <div class="container">
-    <table class="table">
+    <table class="table" id="course-table">
         <thead>
           <tr>
             <th scope="col">Course Id</th>
